<resources>
    <!--    Main-->
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="refresh">Refresh</string>

    <!--    Login Fragment-->
    <string name="login">Login</string>
    <string name="error_login_failed">Login Failed!</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Goodle</string>
    <string name="or">OR</string>
    <string name="welcome_back">Welcome back.</string>
    <string name="no_account">No account?</string>
    <string name="create_one">Create one</string>

    <!--    Sign Up With Email Fragment-->
    <string name="introduce_sign_up_with_email">Please input your email, and we\'ll send you a magic link to complete your sign-up.</string>
    <string name="title_input_email">Email</string>
    <string name="hint_input_email">Email Adress</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_google">Sign up with Goodle</string>

    <!--    Login With Email Fragment-->
    <string name="title_input_password">Password</string>
    <string name="hint_input_password">******</string>
    <string name="introduce_login_with_email">Enter your email and password to sign in.</string>

    <!--    Home Fragment-->
    <string name="logout">Logout</string>
    <string name="in">in</string>
    <string name="description_button_add_post">Button Add Post</string>

    <!--    PostDetail-->
    <string name="button_follow">Follow</string>
    <string name="listen">Listen</string>
    <string name="button_save">Save</string>
    <string name="button_write_on_yopaz_blog">Write on Yopaz Blog</string>
    <string name="turtorials_for_ruby_on_rails">Tutorials for Ruby on Rails</string>
    <string name="share_your_ideas_with_millions_of_reader"> Share your ideas with millions of reader</string>
    <string name="web_view_mime_type">text/html</string>
    <string name="web_view_encoding">base64</string>

    //TODO REMOVE
    <string name="more_from_user">More from Trương Minh Nhật</string>
    <string name="unencodeHtml"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
