<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.kira.android_base.main.fragments.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/space_52">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/space_40"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="@dimen/text_32" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:background="@drawable/background_button_login"
            android:text="@string/sign_in_with_email"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <include layout="@layout/layout_auth_split_line" />

        <Button
            android:id="@+id/login_with_google_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:background="@drawable/background_button_login_social"
            android:drawableLeft="@drawable/ic_google_color"
            android:text="@string/sign_in_with_google"
            android:textAllCaps="false"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/login_with_facebook_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:layout_marginTop="@dimen/space_16"
            android:background="@drawable/background_button_login_social"
            android:drawableLeft="@drawable/ic_facebook_color"
            android:text="@string/sign_in_with_facebook"
            android:textAllCaps="false"
            app:backgroundTint="@null" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_40"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18" />

            <Button
                android:id="@+id/button_navigate_to_sign_up"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_one"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="@dimen/text_18" />

        </LinearLayout>
    </LinearLayout>
</layout>
