<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mainViewModel"
            type="com.kira.android_base.main.MainViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/layout_header_home" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/space_16">

                        <include layout="@layout/layout_post_info" />

                        <WebView
                            android:id="@+id/post_content"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginVertical="@dimen/space_16"
                            android:isScrollContainer="false" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/light_gray"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/space_16">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="70"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/more_from_user"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/text_16"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/space_8"
                                    android:text="@string/turtorials_for_ruby_on_rails" />

                            </LinearLayout>

                            <com.google.android.material.chip.Chip
                                android:id="@+id/btn_follow"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/space_28"
                                android:layout_gravity="center_vertical"
                                android:backgroundTint="@color/gray"
                                android:text="@string/button_follow"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_12"
                                app:chipEndPadding="@dimen/space_8"
                                app:chipMinTouchTargetSize="8dp"
                                app:chipStartPadding="@dimen/space_8" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/space_16"
                            android:gravity="center"
                            android:orientation="vertical">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/space_1"
                                android:layout_marginBottom="@dimen/space_20"
                                android:background="@color/light_silver" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/share_your_ideas_with_millions_of_reader" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/btn_navigate_to_post_editor"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/space_36"
                                android:layout_marginTop="@dimen/space_8"
                                android:backgroundTint="@color/black"
                                android:text="@string/button_write_on_yopaz_blog"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_12"
                                app:chipEndPadding="@dimen/space_8"
                                app:chipMinTouchTargetSize="@dimen/space_8"
                                app:chipStartPadding="@dimen/space_8" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/space_1"
                                android:layout_marginTop="@dimen/space_20"
                                android:background="@color/light_silver" />
                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/suggesstion_post_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/light_gray" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <include layout="@layout/layout_post_detail_bottom_bar" />
    </FrameLayout>
</layout>
