<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/space_48"
            android:layout_height="@dimen/space_48"
            android:layout_marginRight="@dimen/space_12"
            app:cardCornerRadius="@dimen/space_100">

            <ImageView
                android:id="@+id/post_info_avatar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/image_avatar_placeholder" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_12"
                    android:text="Trương Minh Nhật"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/list_tag_item_home"
                    android:layout_width="@dimen/space_68"
                    android:layout_height="@dimen/space_28"
                    android:backgroundTint="@color/gray"
                    android:text="@string/button_follow"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_12"
                    app:chipMinTouchTargetSize="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nov 16, 2016" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_dot" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11 min read" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_dot" />

                <ImageButton
                    android:layout_width="@dimen/space_20"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/ic_play" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listen" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:gravity="center_vertical">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:textColor="@color/gray"
            app:chipBackgroundColor="@color/white"
            app:chipIcon="@drawable/ic_add_bookmark"
            app:chipIconSize="@dimen/space_20"
            app:chipMinTouchTargetSize="@dimen/space_0"
            app:chipStartPadding="@dimen/space_8"
            app:chipStrokeColor="@color/gray"
            app:chipStrokeWidth="@dimen/space_1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_twitter" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_facebook" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_linkedin" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_link" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_options" />

    </LinearLayout>

</LinearLayout>
